--- a/packages/components/content/source/2-molecules/visual/visual.scss
+++ b/packages/components/content/source/2-molecules/visual/visual.scss
@@ -1,7 +1,7 @@
 @use 'sass:meta';
 @use 'bourbon/core/bourbon';
-@use '@kickstartds/core/source/container/container-name';
 @use '@kickstartds/core/source/core/custom-properties';
+@use './container';
 
 @use './visual__image';
 @use './visual__content';
@@ -9,8 +9,8 @@
 @use './visual-vars';
 
 $vars: meta.module-variables(visual-vars);
-@include custom-properties.styles($vars);
-@include container-name.name('visual');
+@include custom-properties.styles($vars, container.$name);
+@include container.wrapper;
 
 .c-visual {
   display: flex;
@@ -41,7 +41,7 @@ $vars: meta.module-variables(visual-vars);
       flex-grow: 1;
     }
 
-    @container visual size(min-width: 640px) {
+    @include container.size('≥' 640px) {
       @include bourbon.position(absolute, 0);
 
       .c-visual--no-crop & {
