--- a/packages/components/base/source/1-atoms/table/table.scss
+++ b/packages/components/base/source/1-atoms/table/table.scss
@@ -1,12 +1,12 @@
 /* stylelint-disable no-descending-specificity */
 @use 'sass:meta';
 @use '@kickstartds/core/source/core/custom-properties';
-@use '@kickstartds/core/source/container/container-name';
+@use './container';
 @use './table-vars';
 
 $vars: meta.module-variables(table-vars);
 @include custom-properties.styles($vars);
-@include container-name.name('table');
+@include container.wrapper;
 
 .c-table {
   width: 100%;
@@ -63,7 +63,7 @@ $vars: meta.module-variables(table-vars);
   }
 
   &--responsive {
-    @container table size(max-width: 450px) {
+    @include container.size('<' 450px) {
       thead {
         display: none;
       }
