--- a/packages/components/content/source/2-molecules/visual-slider/visual-slider.scss
+++ b/packages/components/content/source/2-molecules/visual-slider/visual-slider.scss
@@ -1,6 +1,7 @@
 @use 'sass:meta';
 @use '@kickstartds/core/source/core/custom-properties';
 @use 'bourbon/core/bourbon';
+@use '@kickstartds/base/source/2-molecules/slider/container';
 
 @use './visual-slider-vars';
 @use './slide-preview/visual-slide-preview';
@@ -11,14 +12,14 @@ $vars: meta.module-variables(visual-slider-vars);
 .c-visual-slider {
   // hide preview on small screens
   .c-visual-slide--preview {
-    @container slider size(max-width: 639px) {
+    @include container.size('<' 639px) {
       @include bourbon.hide-visually;
     }
   }
 
   // hide bullets on large screens
   .c-slider__bullet {
-    @container slider size(min-width: 640px) {
+    @include container.size('≥' 640px) {
       display: none;
     }
   }
@@ -26,7 +27,7 @@ $vars: meta.module-variables(visual-slider-vars);
   .c-slider-nav {
     margin-top: 0.5em;
 
-    @container slider size(min-width: 640px) {
+    @include container.size('≥' 640px) {
       margin-top: 0;
       border-bottom: 1px solid var(--c-visual-slider_nav--border-bottom-color);
     }
