--- a/packages/components/form/source/1-atoms/form-field/form-field.scss
+++ b/packages/components/form/source/1-atoms/form-field/form-field.scss
@@ -75,10 +75,8 @@ $vars: meta.module-variables(form-field-vars);
       @include bourbon.size(var(--c-form-field_icon--size));
       position: absolute;
       right: 0;
-      bottom: calc(
-        (calc(var(--ks-line-height-ui) * 1em) - var(--c-form-field_icon--size)) /
-          2
-      );
+      bottom: calc(var(--ks-line-height-ui-m) * 1em) -
+        var(--c-form-field_icon--size);
       margin: $input-padding;
       color: var(--c-form-field_icon--color);
 
