fix: fix post-meta color, remove unused styles

--- a/packages/components/blog/source/2-molecules/post-meta/_post-meta-vars.scss
+++ b/packages/components/blog/source/2-molecules/post-meta/_post-meta-vars.scss
@@ -10,7 +10,7 @@ $item: (
   '.c-post-meta': (
     gap: var(--ks-spacing-xs),
     font: var(--ks-font-ui-s),
-    color: var(--color-grey-6),
+    color: var(--ks-text-color-interface),
     icon-size: 1.2em,
   ),
 ) !default;
