feat: align buttons in content- & teaser-box to the bottom
so the buttons are on one line if boxes are placed side by side

--- a/packages/components/base/source/2-molecules/content-box/content-box.scss
+++ b/packages/components/base/source/2-molecules/content-box/content-box.scss
@@ -9,6 +9,8 @@ $vars: meta.module-variables(content-box-vars);
   margin-bottom: 2em;
   box-sizing: border-box;
   contain: layout inline-size style;
+  display: flex;
+  flex-direction: column;
 
   &--align-center {
     text-align: center;
