--- a/packages/components/base/source/2-molecules/teaser-box/teaser-box.scss
+++ b/packages/components/base/source/2-molecules/teaser-box/teaser-box.scss
@@ -1,5 +1,7 @@
 .c-teaser-box {
   contain: layout inline-size style;
+  display: flex;
+  flex-direction: column;
 
   .c-teaser__image {
     flex-grow: 0;
