feat: make image optional in storytelling

--- a/packages/components/content/source/2-molecules/storytelling/storytelling.scss
+++ b/packages/components/content/source/2-molecules/storytelling/storytelling.scss
@@ -198,6 +198,10 @@ $vars: meta.module-variables(storytelling-vars);
     justify-content: center;
     align-items: center;
 
+    &:only-child {
+      --c-storytelling--horizontal-padding: 0;
+    }
+
     @include breakpoint.media('≥s') {
       padding-left: var(--c-storytelling--horizontal-padding);
     }
