feat: generate inverted color tokens

--- a/packages/components/base/source/0-base/2-generic/topic/_topic-vars.scss
+++ b/packages/components/base/source/0-base/2-generic/topic/_topic-vars.scss
@@ -1,7 +1,7 @@
 $name-: 'g-topic' !default;
 
 $host: (
-  ':root': (
+  ':root, [ks-inverted]': (
     color: var(--ks-text-color-default),
     font: var(--ks-font-display-l),
     font-weight: var(--ks-font-weight-bold),
