--- a/packages/components/base/source/2-molecules/teaser/_teaser-vars.scss
+++ b/packages/components/base/source/2-molecules/teaser/_teaser-vars.scss
@@ -1,7 +1,7 @@
 $name-: 'c-teaser' !default;
 
 $host: (
-  '.c-teaser': (
+  ':root, [ks-inverted]': (
     font: var(--ks-font-copy-m),
     color: var(--ks-text-color-default),
     background: var(--ks-background-color-primary-inverted-tbd),
@@ -15,9 +15,7 @@ $host: (
     ),
     padding: 1rem,
   ),
-  '.c-teaser--style-dark': (
-    color: var(--ks-text-color-default-inverted),
-    background: var(--ks-background-color-primary-tbd),
+  '[ks-inverted=true]': (
     border: null,
     shadow: null,
     shadow-hover: (
@@ -29,7 +27,7 @@ $host: (
 ) !default;
 
 $text: (
-  '.c-teaser': (
+  ':root': (
     spacing: 0.5rem,
   ),
 ) !default;
