fix(container): improve container mixing, by making container name explicit

--- a/packages/components/base/source/1-atoms/table/table.scss
+++ b/packages/components/base/source/1-atoms/table/table.scss
@@ -63,7 +63,7 @@ $vars: meta.module-variables(table-vars);
   }
 
   &--responsive {
-    @include container.size('<' 450px) {
+    @include container.size('<', 450px) {
       thead {
         display: none;
       }
