--- a/packages/components/base/source/2-molecules/slider/slider-arrows/_slider-arrows.scss
+++ b/packages/components/base/source/2-molecules/slider/slider-arrows/_slider-arrows.scss
@@ -6,7 +6,7 @@
   opacity: 0;
   transition: 0.3s;
 
-  @include container.size('≥' 960px) {
+  @include container.size('≥', 960px) {
     display: block;
   }
 
