--- a/packages/components/content/source/2-molecules/collapsible-box/collapsible-box.scss
+++ b/packages/components/content/source/2-molecules/collapsible-box/collapsible-box.scss
@@ -37,7 +37,7 @@ $vars: meta.module-variables(collapsible-box-vars);
     &__text {
       flex: 1;
 
-      @include container.size('≥' 640px) {
+      @include container.size('≥', 640px) {
         padding-right: 1em;
       }
     }
