--- a/packages/components/core/source/core/_container.scss
+++ b/packages/components/core/source/core/_container.scss
@@ -9,12 +9,8 @@ $unit-intervals: (
   'px': 1,
   // 'em': 0.01,
   // 'rem': 0.1,
-  // '': 0,,,
+  // '': 0,,,,
 ) !default;
-
-@if not $name {
-  @error '$name has to be configured (See https://sass-lang.com/documentation/at-rules/use#configuration)';
-}
 
 @mixin wrapper {
   @at-root {
@@ -50,12 +46,16 @@ $unit-intervals: (
   @return $value;
 }
 
-@mixin size($expression) {
-  $operator: get-operator(list.nth($expression, 1));
-  $value: get-value(list.nth($expression, 2), $operator);
+@mixin size($operator, $value, $localName: $name) {
+  @if not $localName {
+    @error '$localName undefined';
+  }
+
+  $operator: get-operator($operator);
+  $value: get-value($value, $operator);
   $prefix: if(list.index(('<', '<=', '≤'), $operator), 'max', 'min');
 
-  @container #{$name} size(#{string.unquote('#{$prefix}-width: #{$value}')}) {
+  @container #{$localName} size(#{string.unquote('#{$prefix}-width: #{$value}')}) {
     @content;
   }
 }
