--- a/packages/components/content/source/2-molecules/quote/quote.scss
+++ b/packages/components/content/source/2-molecules/quote/quote.scss
@@ -10,7 +10,7 @@ $vars: meta.module-variables(quote-vars);
 .c-quote {
   align-items: var(--c-quote--align);
 
-  @include container.size('≥' 640px) {
+  @include container.size('≥', 640px) {
     display: flex;
   }
 
@@ -20,7 +20,7 @@ $vars: meta.module-variables(quote-vars);
     text-align: center;
     margin-bottom: 1rem;
 
-    @include container.size('≥' 640px) {
+    @include container.size('≥', 640px) {
       margin-bottom: 0;
     }
   }
