--- a/packages/components/content/source/2-molecules/storytelling/storytelling.scss
+++ b/packages/components/content/source/2-molecules/storytelling/storytelling.scss
@@ -19,7 +19,7 @@ $vars: meta.module-variables(storytelling-vars);
   padding: var(--c-storytelling--vertical-padding)
     var(--c-storytelling--horizontal-padding);
 
-  @include container.size('≥' 640px) {
+  @include container.size('≥', 640px) {
     flex-direction: row;
   }
 
@@ -42,7 +42,7 @@ $vars: meta.module-variables(storytelling-vars);
       margin-bottom: 0;
     }
 
-    @include container.size('≥' 640px) {
+    @include container.size('≥', 640px) {
       padding-right: var(--c-storytelling--horizontal-padding);
       margin-bottom: 0;
 
@@ -51,7 +51,7 @@ $vars: meta.module-variables(storytelling-vars);
       }
     }
 
-    @include container.size('≥' 960px) {
+    @include container.size('≥', 960px) {
       // margin-bottom: 0;
 
       .c-storytelling--full & {
@@ -69,7 +69,7 @@ $vars: meta.module-variables(storytelling-vars);
       img {
         margin-top: calc(-1 * var(--c-storytelling--vertical-padding));
 
-        @include container.size('<' 640px) {
+        @include container.size('<', 640px) {
           .c-storytelling--order-mobile-image-last & {
             margin-top: 0;
           }
@@ -89,7 +89,7 @@ $vars: meta.module-variables(storytelling-vars);
           margin-bottom: calc(-1 * var(--c-storytelling--vertical-padding));
         }
 
-        @include container.size('≥' 640px) {
+        @include container.size('≥', 640px) {
           margin-bottom: calc(-1 * var(--c-storytelling--vertical-padding));
         }
       }
@@ -120,7 +120,7 @@ $vars: meta.module-variables(storytelling-vars);
     }
 
     .c-storytelling--order-mobile-image-last & {
-      @include container.size('<' 640px) {
+      @include container.size('<', 640px) {
         order: 2;
         margin-bottom: 0;
         margin-top: 1rem;
@@ -128,7 +128,7 @@ $vars: meta.module-variables(storytelling-vars);
     }
 
     .c-storytelling--order-desktop-image-last & {
-      @include container.size('≥' 640px) {
+      @include container.size('≥', 640px) {
         order: 2;
         padding-right: 0;
         padding-left: var(--c-storytelling--horizontal-padding);
@@ -139,11 +139,11 @@ $vars: meta.module-variables(storytelling-vars);
     .c-storytelling--full.c-storytelling--order-desktop-image-last & {
       padding: 0;
 
-      @include container.size('≥' 640px) {
+      @include container.size('≥', 640px) {
         padding: 0;
       }
 
-      @include container.size('≥' 960px) {
+      @include container.size('≥', 960px) {
         padding: 0;
       }
     }
@@ -199,7 +199,7 @@ $vars: meta.module-variables(storytelling-vars);
     justify-content: center;
     align-items: center;
 
-    @include container.size('≥' 640px) {
+    @include container.size('≥', 640px) {
       padding-left: var(--c-storytelling--horizontal-padding);
     }
 
@@ -218,7 +218,7 @@ $vars: meta.module-variables(storytelling-vars);
     &--right {
       justify-content: flex-start;
 
-      @include container.size('≥' 640px) {
+      @include container.size('≥', 640px) {
         justify-content: flex-end;
       }
     }
@@ -231,7 +231,7 @@ $vars: meta.module-variables(storytelling-vars);
     .c-storytelling--order-desktop-image-last & {
       padding-left: 0;
 
-      @include container.size('≥' 640px) {
+      @include container.size('≥', 640px) {
         padding-right: var(--c-storytelling--horizontal-padding);
       }
     }
