fix(container): add missing wrappers for new component containers

--- a/packages/components/base/source/0-base/3-objects/section/section.scss
+++ b/packages/components/base/source/0-base/3-objects/section/section.scss
@@ -2,9 +2,11 @@
 @use '@kickstartds/core/source/core/custom-properties';
 @use '../../1-tools/scss/anchor';
 @use './section-vars';
+@use './container';
 
 $vars: meta.module-variables(section-vars);
 @include custom-properties.styles($vars);
+@include container.wrapper('section');
 
 .l-section {
   @include anchor.anchor-target;
