--- a/packages/components/base/source/2-molecules/content-box/content-box.scss
+++ b/packages/components/base/source/2-molecules/content-box/content-box.scss
@@ -1,9 +1,11 @@
 @use 'sass:meta';
 @use '@kickstartds/core/source/core/custom-properties';
 @use './content-box-vars';
+@use './container';
 
 $vars: meta.module-variables(content-box-vars);
 @include custom-properties.styles($vars);
+@include container.wrapper('content-box');
 
 .c-content-box {
   margin-bottom: 2em;
