--- a/packages/components/base/source/2-molecules/slider/slider-arrows/_slider-arrows.scss
+++ b/packages/components/base/source/2-molecules/slider/slider-arrows/_slider-arrows.scss
@@ -22,7 +22,7 @@
   color: var(--c-slider_arrow--color);
   background-color: var(--c-slider_arrow--background);
   user-select: none;
-  border-radius: 3px;
+  border-radius: var(--ks-border-radius-control);
   z-index: 100;
   transition: inherit;
 
