--- a/packages/components/base/source/2-molecules/slider/slider-bullet/_slider-bullet.scss
+++ b/packages/components/base/source/2-molecules/slider/slider-bullet/_slider-bullet.scss
@@ -4,8 +4,9 @@
   @include bourbon.size(var(--c-slider_bullet--size));
 
   align-self: center;
-  border-radius: 50%;
-  border: 1px solid var(--c-slider_bullet--outline-color);
+  border-radius: var(--ks-border-radius-circle);
+  border: var(--ks-border-width-default) solid
+    var(--c-slider_bullet--outline-color);
   transition: inherit;
   margin: var(--c-slider_bullet--margin);
   display: inline-block;
