--- a/packages/components/base/source/2-molecules/teaser/_teaser-vars.scss
+++ b/packages/components/base/source/2-molecules/teaser/_teaser-vars.scss
@@ -5,7 +5,7 @@ $host: (
     font: var(--ks-font-copy-m),
     color: var(--ks-text-color-default),
     background: var(--ks-background-color-primary-inverted-tbd),
-    border: 1px solid var(--color-grey-1),
+    border: var(--ks-border-width-default) solid var(--color-grey-1),
     border-radius: null,
     shadow: null,
     shadow-hover: (
