--- a/packages/components/blog/source/2-molecules/post-meta/_post-meta-vars.scss
+++ b/packages/components/blog/source/2-molecules/post-meta/_post-meta-vars.scss
@@ -22,6 +22,6 @@ $author: (
     color: var(--c-post-meta_item--color),
     font-weight: var(--ks-font-weight-bold),
     avatar-size: 1.5em,
-    avatar-border-radius: 50%,
+    avatar-border-radius: var(--ks-border-radius-circle),
   ),
 ) !default;
