--- a/packages/components/form/source/1-atoms/form-field/_form-field-vars.scss
+++ b/packages/components/form/source/1-atoms/form-field/_form-field-vars.scss
@@ -2,9 +2,9 @@ $name-: 'c-form-field';
 
 $host: (
   ':root': (
-    border: 1px solid,
+    border: var(--ks-border-width-default) solid,
     border-color: var(--color-grey-2),
-    border-radius: 3px,
+    border-radius: var(--ks-border-radius-control),
     background: var(--ks-background-color-interface-interactive),
     background-disabled:
       var(--ks-background-color-interface-interactive-disabled),
