--- a/packages/components/base/source/1-atoms/divider/_divider-vars.scss
+++ b/packages/components/base/source/1-atoms/divider/_divider-vars.scss
@@ -6,7 +6,7 @@ $host: (
     height: 1px,
   ),
   '.c-divider--accent': (
-    background: var(--color-primary-alpha-1),
+    background: var(--ks-color-primary-alpha-1),
   ),
   '.c-divider--dark': (
     background: var(--color-white-alpha-1),
