--- a/packages/components/content/source/2-molecules/visual-slider/_visual-slider-vars.scss
+++ b/packages/components/content/source/2-molecules/visual-slider/_visual-slider-vars.scss
@@ -13,7 +13,7 @@ $preview: (
     background-hover: var(--ks-background-color-interface-interactive-hover),
     background-active: var(--ks-background-color-interface-interactive-current),
     color-hover: null,
-    color-active: var(--color-primary),
+    color-active: var(--ks-color-primary),
     autoplay-indicator-color: var(--color-black-alpha-2),
   ),
 ) !default;
