--- a/packages/components/form/source/1-atoms/form-field/_form-field-vars.scss
+++ b/packages/components/form/source/1-atoms/form-field/_form-field-vars.scss
@@ -20,7 +20,7 @@ $hover: (
 
 $focus: (
   ':root': (
-    border-color: var(--color-primary),
+    border-color: var(--ks-color-primary),
     shadow: 0 0 4px -1px,
   ),
 ) !default;
