fix: fix button colors

--- a/packages/components/base/source/1-atoms/button/button/_button-vars.scss
+++ b/packages/components/base/source/1-atoms/button/button/_button-vars.scss
@@ -3,7 +3,7 @@ $name-: 'c-button';
 $host: (
   '.c-button': (
     color-primary: var(--ks-color-primary),
-    color-secondary: var(--color-white),
+    color-secondary: var(--ks-color-primary-inverted),
     font: var(--ks-font-ui-m),
     font-weight: var(--ks-font-weight-regular),
     icon-size: 1.5em,
@@ -57,10 +57,10 @@ $fill-animation: (
     color-hover: var(--c-button--color-secondary),
   ),
   '.c-button--clear-inverted': (
-    color-hover: var(--c-button--ks-color-primary),
+    color-hover: var(--c-button--color-primary),
   ),
   '.c-button--solid': (
-    color-hover: var(--c-button--ks-color-primary),
+    color-hover: var(--c-button--color-primary),
   ),
   '.c-button--solid-inverted': (
     color-hover: var(--c-button--color-secondary),
@@ -69,6 +69,6 @@ $fill-animation: (
     color-hover: var(--c-button--color-secondary),
   ),
   '.c-button--outline-inverted': (
-    color-hover: var(--c-button--ks-color-primary),
+    color-hover: var(--c-button--color-primary),
   ),
 ) !default;
