feat: add foreground color scale; improve inverted logic

--- a/packages/components/base/source/1-atoms/table/_table-vars.scss
+++ b/packages/components/base/source/1-atoms/table/_table-vars.scss
@@ -17,7 +17,7 @@ $header: (
 
 $border: (
   '.c-table': (
-    border: var(--ks-border-width-default) solid var(--color-black-alpha-1),
+    border: var(--ks-border-width-default) solid var(--ks-color-fg-alpha-1),
   ),
 ) !default;
 
