--- a/packages/components/blog/source/2-molecules/post-head/post-head-vars.scss
+++ b/packages/components/blog/source/2-molecules/post-head/post-head-vars.scss
@@ -4,7 +4,7 @@ $date: (
   '.c-post-head': (
     font: var(--ks-font-ui-xs),
     font-weight: var(--ks-font-weight-bold),
-    color: var(--color-black-alpha-5),
+    color: var(--ks-color-fg-alpha-5),
   ),
 ) !default;
 
