--- a/packages/components/content/source/2-molecules/collapsible-box/_collapsible-box-vars.scss
+++ b/packages/components/content/source/2-molecules/collapsible-box/_collapsible-box-vars.scss
@@ -2,7 +2,7 @@ $name-: 'c-collapsible-box';
 
 $host: (
   '.c-collapsible-box': (
-    border-color: var(--color-black-alpha-1),
+    border-color: var(--ks-color-fg-alpha-1),
   ),
 ) !default;
 
