--- a/packages/components/content/source/2-molecules/contact/contact.scss
+++ b/packages/components/content/source/2-molecules/contact/contact.scss
@@ -48,7 +48,7 @@ $vars: meta.module-variables(contact-vars);
 
     &__subheadline {
       --c-headline_subheadline--margin: 0;
-      --c-headline_subheadline--color: var(--color-black-alpha-7);
+      --c-headline_subheadline--color: var(--ks-color-fg-alpha-7);
     }
   }
 }
