--- a/packages/components/content/source/2-molecules/visual-slider/_visual-slider-vars.scss
+++ b/packages/components/content/source/2-molecules/visual-slider/_visual-slider-vars.scss
@@ -2,7 +2,7 @@ $name-: 'c-visual-slider' !default;
 
 $nav: (
   '.c-visual-slider': (
-    border-bottom-color: var(--color-black-alpha-1),
+    border-bottom-color: var(--ks-color-fg-alpha-1),
   ),
 ) !default;
 
@@ -14,6 +14,6 @@ $preview: (
     background-active: var(--ks-background-color-interface-interactive-current),
     color-hover: null,
     color-active: var(--ks-color-primary),
-    autoplay-indicator-color: var(--color-black-alpha-2),
+    autoplay-indicator-color: var(--ks-color-fg-alpha-2),
   ),
 ) !default;
