--- a/packages/components/content/source/2-molecules/visual/_visual__box.scss
+++ b/packages/components/content/source/2-molecules/visual/_visual__box.scss
@@ -49,7 +49,7 @@
 
   @media print {
     background-color: transparent;
-    border: 2px solid var(--color-grey-3);
+    border: 2px solid var(--ks-color-fg-to-bg-7);
     margin: 1cm 0;
     width: auto;
 
