--- a/packages/components/form/source/1-atoms/form-check/form-check.scss
+++ b/packages/components/form/source/1-atoms/form-check/form-check.scss
@@ -112,6 +112,6 @@ $vars: meta.module-variables(form-check-vars);
 
   &__hint {
     margin: 0.25rem 0 0;
-    color: var(--color-black-alpha-7);
+    color: var(--ks-color-fg-alpha-7);
   }
 }
