--- a/packages/components/form/source/1-atoms/form-field/form-field.scss
+++ b/packages/components/form/source/1-atoms/form-field/form-field.scss
@@ -98,6 +98,6 @@ $vars: meta.module-variables(form-field-vars);
 
   &__hint {
     margin: 0.25rem 0 0;
-    color: var(--color-black-alpha-7);
+    color: var(--ks-color-fg-alpha-7);
   }
 }
