--- a/packages/components/base/source/2-molecules/slider/_slider-vars.scss
+++ b/packages/components/base/source/2-molecules/slider/_slider-vars.scss
@@ -18,7 +18,7 @@ $bullet: (
   '.c-slider': (
     size: 0.8rem,
     margin: 0.25rem 0.5rem,
-    outline-color: var(--color-black-alpha-2),
+    outline-color: var(--ks-color-fg-alpha-2),
     outline-color-active: var(--ks-color-primary),
     background: var(--ks-background-color-interface-interactive),
     background-active: var(--ks-background-color-interface-interactive-current),
