--- a/packages/components/form/source/1-atoms/form-field/_form-field-vars.scss
+++ b/packages/components/form/source/1-atoms/form-field/_form-field-vars.scss
@@ -1,9 +1,9 @@
 $name-: 'c-form-field';
 
 $host: (
-  ':root': (
+  ':root, [ks-inverted]': (
     border: var(--ks-border-width-default) solid,
-    border-color: var(--color-grey-2),
+    border-color: var(--ks-color-fg-to-bg-6),
     border-radius: var(--ks-border-radius-control),
     background: var(--ks-background-color-interface-interactive),
     background-disabled:
@@ -13,21 +13,21 @@ $host: (
 ) !default;
 
 $hover: (
-  ':root': (
-    border-color: var(--color-grey-3),
+  ':root, [ks-inverted]': (
+    border-color: var(--ks-color-fg-to-bg-5),
   ),
 ) !default;
 
 $focus: (
-  ':root': (
+  ':root, [ks-inverted]': (
     border-color: var(--ks-color-primary),
     shadow: 0 0 4px -1px,
   ),
 ) !default;
 
 $icon: (
-  ':root': (
+  ':root, [ks-inverted]': (
     size: calc(var(--ks-line-height-ui-m) * 0.75em),
-    color: var(--color-black-alpha-7),
+    color: var(--ks-color-fg-alpha-7),
   ),
 ) !default;
