--- a/packages/components/form/source/1-atoms/form-field/_form-field-vars.scss
+++ b/packages/components/form/source/1-atoms/form-field/_form-field-vars.scss
@@ -1,7 +1,7 @@
 $name-: 'c-form-field';
 
 $host: (
-  ':root, [ks-inverted]': (
+  ':root, [ks-theme]': (
     border: var(--ks-border-width-default) solid,
     border-color: var(--ks-color-fg-to-bg-6),
     border-radius: var(--ks-border-radius-control),
@@ -13,20 +13,20 @@ $host: (
 ) !default;
 
 $hover: (
-  ':root, [ks-inverted]': (
+  ':root, [ks-theme]': (
     border-color: var(--ks-color-fg-to-bg-5),
   ),
 ) !default;
 
 $focus: (
-  ':root, [ks-inverted]': (
+  ':root, [ks-theme]': (
     border-color: var(--ks-color-primary),
     shadow: 0 0 4px -1px,
   ),
 ) !default;
 
 $icon: (
-  ':root, [ks-inverted]': (
+  ':root, [ks-theme]': (
     size: calc(var(--ks-line-height-ui-m) * 0.75em),
     color: var(--ks-color-fg-alpha-7),
   ),
