fix: fix inverted colors in components

--- a/packages/components/base/source/0-base/3-objects/section/_section-vars.scss
+++ b/packages/components/base/source/0-base/3-objects/section/_section-vars.scss
@@ -1,7 +1,7 @@
 $name-: 'l-section';
 
 $host: (
-  ':root, [ks-theme]': (
+  ':root, [ks-theme], [ks-inverted]': (
     content-width-narrow: 46.5rem,
     content-width-default: 62rem,
     content-width-wide: 75rem,
