--- a/packages/components/base/source/0-base/2-generic/link/_link-vars.scss
+++ b/packages/components/base/source/0-base/2-generic/link/_link-vars.scss
@@ -1,7 +1,7 @@
 $name-: 'g-link' !default;
 
 $host: (
-  ':root, [ks-theme]': (
+  ':root, [ks-theme], [ks-inverted]': (
     font-weight: var(--ks-font-weight-regular),
     text-decoration: underline,
     text-decoration-hover: inherit,
